# python-google-automlvision

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
frontend/: package.json
frontend/src/: main.js
frontend/src/components/: HelloWorld.vue
python_automl_vision/: config.py
python_automl_vision/services/: services.py
static/: babel.config.js  package-lock.json
static/public/: index.html
static/src/: main.js
static/src/components/: HelloWorld.vue
