[tool.poetry]
name = "python-google-automlvision"
version = "0.1.0"
description = "AutoML Vision"
authors = ["Thang Dang"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
requests = "^2.25.1"
uvicorn = "^0.13.4"
google-cloud-vision = "^2.2.0"
python-multipart = "^0.0.5"
google-cloud-automl = "^2.2.0"
grpcio = "^1.36.1"
google-cloud-storage = "^1.37.0"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.2.2"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
